v0.0.1
--------------------------------------------------------
- 重构类模型，__super作为所有接口调用父类同名接口的方式
- 独立类模型实现文件至{lib}base/klass.js
- 增加依赖注入，保留兼容模式下名字空间形式
- 独立平台适配，删除patched目录，独立到各API、控件
- 清理没用控件或者后期重新开发控件及API
  * 删除native
  * 删除util/xmpp
  * 删除util/gesture
  * 删除util/ajax/connect.js
  * 删除util/cache/config.js
  * 删除util/dispatch/v1
  * 删除util/module
  * 删除util/tb.resizer
  * 删除util/oauth
  * 删除util/sorter
  * 删除ui/arrows
  * 删除ui/loading
  * 删除ui/loadmore
  * 删除ui/pullrefresh
  * 删除ui/sorter

define.js
- NEJ.config接口名称改为NEJ.deps
- 删除define.cmp.js兼容支持

base/util.js
- 删除_$mergeList
- 迁移_$dom2object、_$xml2object至{lib}base/element.js
- 增加接口_$query、_$merge、_$fetch替代原NEJ.Q、NEJ.X、NEJ.EX

base/element.js
- 交换_$getMaxBox接口输入参数顺序
- 修改_$dom2object第二个参数为非必传参数

base/event.js
- 删除接口_$stopClick

util/event.js
- 更改_$$Event类名为_$$EventTarget，兼容_$$Event
- 删除_$addEvent接口，同功能接口_$setEvent代替
- 删除_$api接口

util/ajax/dwr.js
- 删除_$setProxy接口

util/cache/storage.js
- 删除_$cloneDataInStorage接口

util/dispatcher
- 合并module.2.js和module.base.js
util/dispatcher.2.js
- 删除_$apply接口，使用_$redirect代替

util/page/page.js
- 删除_e._$page接口

util/template/tpl.js
- 删除_e._$setup接口

util/tab/tab.js
- onchange事件阻止属性nostop改为stopped
- 删除nej.e._$tab接口






